--- a/index.html
+++ b/index.html
@@ -8,9 +8,103 @@
 </head>
 
 <body>
-
-  <p>Репозиторий создан для обучения на продвинутом онлайн-интенсиве «<a href="https://htmlacademy.ru/advanced_intensive">Создание веб-интерфейсов с помощью HTML и CSS</a>».</p>
-
+  <header>
+            <h1>Pink</h1>
+            <div class="menu-btn  open"></div>
+            <nav>
+                <ul class="top-menu">
+                    <li><a href="">Информация</a></li>
+                    <li><a href="">Возможности</a></li>
+                    <li><a href="">Отзывы</a></li>
+                    <li><a href="">Стоимость</a></li>
+                </ul>
+            </nav>
+            <p>Взгляните на жизнь иначе!</p>
+            <img src="" alt="mac">
+            <img src="" alt="android">
+            <img src="" alt="windows">
+            <a class="download-btn" href="">Скачать приложение</a>
+            <p>Доступно iPhone, iPad, Android, Windows phone, MacOS, Windows 8</p>
+        </header>
+        <main>
+            <p  class="intro">
+                <span>Устали от серости мегаполиса?</span>
+                <span>Нам есть, что вам предложить!</span>
+            </p>
+            <div classs="features">
+                <section>
+                    <h2>Поднимает настроение</h2>
+                    <p>Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
+                </section>
+                <section>
+                    <h2>Меняет мир вокруг</h2>
+                    <p>исью, чтобы усилить эффектСделайте снимок и укарсьте его смайликом или текстовой подп</p>
+                </section>
+                <section>
+                    <h2>Заводит новых друзей</h2>
+                    <p>Ставьте лайки, комментируйте, делитесь фотографиями с друзбями и заводите новых</p>
+                </section>
+                <img src="" alt="iphone screen" style="width: 157px; height: 320px;">
+            </div>
+            <div class="slider-comments">
+                <input type="radio" id="btn-1" name="toggle" checked>
+                <input type="radio" id="btn-2" name="toggle">
+                <input type="radio" id="btn-3" name="toggle">
+                <div class="slider-controls">
+                    <label for="btn-1"></label>
+                    <label for="btn-2"></label>
+                    <label for="btn-3"></label>
+                </div>
+                <div class="slides">
+                    <div class="slide">
+                        <div class="title">Николай Петров</div>
+                        <p>&laquo;Это приложение перевернуло мой мир и позволило по-новому взглунуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!&raquo;</p>
+                    </div>
+                </div>
+            </div>
+            <div class="slider-prices">
+                <input type="radio" id="btn-1" name="toggle" checked>
+                <input type="radio" id="btn-2" name="toggle">
+                <input type="radio" id="btn-3" name="toggle">
+                <div class="slider-controls">
+                    <label for="btn-1"></label>
+                    <label for="btn-2"></label>
+                    <label for="btn-3"></label>
+                </div>
+                <div class="slides">
+                    <div class="slide">
+                        <table>
+                            <tr>
+                                <th class="flag">
+                                    Стандарт
+                                    <span class="price">3,99 USD</span>
+                                </th>
+                            </tr>
+                            <tr>
+                                <td>Розовый фильтр</td>
+                            </tr>
+                            <tr>
+                                <td>Смайлики</td>
+                            </tr>
+                            <tr>
+                                <td>Комментарии</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer>
+            <p class="intro">Остались вопросы? Свяжитесь с нами!</p>
+            <span>Звоните:</span>
+            <p>8(800) 1000 900</p>
+            <span>Пишите:</span>
+            <p>hello@pinkapp.ru</p>
+            <span>Приезжайте в гости:</span>
+            <p>Санкт-Петербург, Невский проспект, д. 20</p>
+            <div class="map"></div>
+        </footer>
+  
   <!-- <script src="js/script.js"></script> -->
 
 </body>
