--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 </head>
 
 <body>
-  <header>
-            <h1>Pink</h1>
-            <div class="menu-btn  open"></div>
-            <nav>
-                <ul class="top-menu">
+    <div class="wrapper">
+        <header class="page-header">
+            <div class="clearfix">
+                <div class="logo-left">
+                    <img src="" alt="Pink" class="logo">
+                </div>
+                <div class="menu-right">
+                    <button type="button" class="menu-btn  open"></button>
+                </div>
+            </div>
+            <nav class="top-menu">
+                <ul>
                     <li><a href="">Информация</a></li>
                     <li><a href="">Возможности</a></li>
                     <li><a href="">Отзывы</a></li>
@@ -20,40 +27,41 @@
                 </ul>
             </nav>
             <p>Взгляните на жизнь иначе!</p>
-            <img src="" alt="mac">
-            <img src="" alt="android">
-            <img src="" alt="windows">
             <a class="download-btn" href="">Скачать приложение</a>
+            <div class="device-logo">
+                <img src="" alt="mac">
+                <img src="" alt="android">
+                <img src="" alt="windows">
+            </div>
             <p>Доступно iPhone, iPad, Android, Windows phone, MacOS, Windows 8</p>
         </header>
-        <main>
-            <p  class="intro">
-                <span>Устали от серости мегаполиса?</span>
-                <span>Нам есть, что вам предложить!</span>
-            </p>
-            <div classs="features">
-                <section>
+        <div class="page-content">
+            <div  class="intro">
+                <p>Устали от серости мегаполиса?</p>
+                <p>Нам есть, что вам предложить!</p>
+            </div>
+            <div class="features">
+                <section class="features-item">
                     <h2>Поднимает настроение</h2>
                     <p>Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
                 </section>
-                <section>
+                <section class="features-item">
                     <h2>Меняет мир вокруг</h2>
-                    <p>исью, чтобы усилить эффектСделайте снимок и укарсьте его смайликом или текстовой подп</p>
+                    <p>Сделайте снимок и укарсьте его смайликом или текстовой подписью, чтобы усилить эффект</p>
                 </section>
-                <section>
+                <section class="features-item">
                     <h2>Заводит новых друзей</h2>
-                    <p>Ставьте лайки, комментируйте, делитесь фотографиями с друзбями и заводите новых</p>
+                    <p>Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
                 </section>
-                <img src="" alt="iphone screen" style="width: 157px; height: 320px;">
             </div>
             <div class="slider-comments">
-                <input type="radio" id="btn-1" name="toggle" checked>
-                <input type="radio" id="btn-2" name="toggle">
-                <input type="radio" id="btn-3" name="toggle">
+                <input type="radio" id="comment-1" name="toggle1" checked>
+                <input type="radio" id="comment-2" name="toggle1">
+                <input type="radio" id="comment-3" name="toggle1">
                 <div class="slider-controls">
-                    <label for="btn-1"></label>
-                    <label for="btn-2"></label>
-                    <label for="btn-3"></label>
+                    <label for="comment-1"></label>
+                    <label for="comment-2"></label>
+                    <label for="comment-3"></label>
                 </div>
                 <div class="slides">
                     <div class="slide">
@@ -63,9 +71,9 @@
                 </div>
             </div>
             <div class="slider-prices">
-                <input type="radio" id="btn-1" name="toggle" checked>
-                <input type="radio" id="btn-2" name="toggle">
-                <input type="radio" id="btn-3" name="toggle">
+                <input type="radio" id="btn-1" name="toggle2" checked>
+                <input type="radio" id="btn-2" name="toggle2">
+                <input type="radio" id="btn-3" name="toggle2">
                 <div class="slider-controls">
                     <label for="btn-1"></label>
                     <label for="btn-2"></label>
@@ -81,31 +89,36 @@
                                 </th>
                             </tr>
                             <tr>
-                                <td>Розовый фильтр</td>
+                                <td class="option">Розовый фильтр</td>
                             </tr>
                             <tr>
-                                <td>Смайлики</td>
+                                <td class="option">Смайлики</td>
                             </tr>
                             <tr>
-                                <td>Комментарии</td>
+                                <td class="option">Комментарии</td>
                             </tr>
                         </table>
                     </div>
                 </div>
             </div>
-        </main>
-        <footer>
+        </div>    
+        <footer class="page-footer">
             <p class="intro">Остались вопросы? Свяжитесь с нами!</p>
-            <span>Звоните:</span>
-            <p>8(800) 1000 900</p>
-            <span>Пишите:</span>
-            <p>hello@pinkapp.ru</p>
-            <span>Приезжайте в гости:</span>
-            <p>Санкт-Петербург, Невский проспект, д. 20</p>
+            <p class="contacts">
+                <span>Звоните:</span>
+                8(800) 1000 900
+            </p>
+            <p class="contacts">
+                <span>Пишите:</span>
+                hello@pinkapp.ru
+            </p>
+            <p class="contacts">
+                <span>Приезжайте в гости:</span>
+                Санкт-Петербург, Невский проспект, д. 20
+            </p>
             <div class="map"></div>
         </footer>
-  
   <!-- <script src="js/script.js"></script> -->
-
+    </div>
 </body>
 </html>
